style: Fix style on mobile

--- a/bucha/styles/Card.module.css
+++ b/bucha/styles/Card.module.css
@@ -54,7 +54,7 @@
 }
 
 .first {
-    margin-top: 6.5rem;
+    margin-top: 2rem;
 }
 
 @media (max-width:1400px) {
