--- a/bucha/styles/Home.module.css
+++ b/bucha/styles/Home.module.css
@@ -5,5 +5,4 @@
 .content {
   display: flex;
   flex-direction: column;
-  margin-bottom: 9.5rem;
 }
