--- a/bucha/styles/InstructionsIntro.module.css
+++ b/bucha/styles/InstructionsIntro.module.css
@@ -26,33 +26,21 @@
 
 @media(max-width:1580px) {
     .container {
-        max-width: 1440px;
-        padding-left: 0;
-        padding-right: 0;
-        margin: 9.6rem auto 4rem auto;
         padding: 1rem;
     }
 
     .container h1 {
         font-size: 40px;
-        font-weight: 700;
         line-height: 1.2;
     }
 
     .container p {
         font-size: 18px;
-        font-weight: 400;
-        line-height: 1.2;
     }
 }
 
 @media(max-width:769px) {
     .container {
-        max-width: 1440px;
-        padding-left: 0;
-        padding-right: 0;
         margin: 4rem auto;
-        padding: 1rem;
     }
-
 }
