--- a/bucha/styles/TeamSection.module.css
+++ b/bucha/styles/TeamSection.module.css
@@ -1,8 +1,7 @@
 .section {
     max-width: 1440px;
-    padding-left: 0;
-    padding-right: 0;
-    margin: 4rem auto;
+    padding: 0 5%;
+    margin: 3rem auto;
 }
 
 .container {
@@ -15,11 +14,11 @@
 .container h2 {
     font-size: 50px;
     font-weight: 700;
-    margin-bottom: 3.25rem;
+    margin: 2rem 0;
 }
 
 .container p {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 1.2;
     margin-top: 0;
@@ -41,55 +40,38 @@
 
 @media(max-width:1580px) {
     .container {
-        display: flex;
-        gap: 4rem;
-        justify-content: center;
-        align-items: center;
         padding: 1rem;
     }
 
     .container h2 {
         font-size: 40px;
-        font-weight: 700;
         line-height: 1.2;
     }
 
     .container p {
         font-size: 18px;
-        font-weight: 400;
-        line-height: 1.2;
     }
-
 }
 
 @media(max-width:769px) {
     .container {
-        display: flex;
         flex-direction: column;
-        gap: 4rem;
-        justify-content: center;
-        align-items: center;
-        padding: 1rem;
+        gap: 1rem;
     }
 
     .container h2 {
         font-size: 40px;
-        font-weight: 700;
-        line-height: 1.2;
         margin-bottom: 0;
+        margin-top: 0;
     }
 
     .container p {
         font-size: 18px;
-        font-weight: 400;
-        line-height: 1.2;
+        margin-top: 32px;
     }
 
     .title {
-        display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 0.5rem;
     }
-
 }
